--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.2.7
 beautifulsoup4==4.8.2
+dj-database-url==0.5.0
 Django==3.0.4
 django-bootstrap4==1.1.1
 django-stdimage==5.0.2
 gunicorn==20.0.4
+mysqlclient==1.4.6
 Pillow==7.0.0
 progressbar2==3.50.1
+psycopg2-binary==2.8.4
 PyMySQL==0.9.3
 python-utils==2.4.0
 pytz==2019.3
