--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.0.4
 django-bootstrap4==1.1.1
 django-stdimage==5.0.2
 gunicorn==20.0.4
+localflavor==1.8
 mysqlclient==1.4.6
 Pillow==7.0.0
 progressbar2==3.50.1
